# test_query_tool

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  build_space_query.sh  run.sh  toad_manual_features.json
.cargo/: config.toml
src/: app.rs  main.rs
src/db/: connection.rs  mod.rs  query.rs  query_tests.rs  session.rs
src/db/query/: executor.rs  mod.rs  query_tests.rs  script.rs  types.rs
src/ui/: connection_dialog.rs  constants.rs  feature_catalog.rs  find_replace.rs  font_settings.rs  intellisense.rs  intellisense_context.rs  main_window.rs  menu.rs  mod.rs  object_browser.rs  query_history.rs  query_tabs.rs  result_table.rs  result_tabs.rs  settings_dialog.rs  sql_editor.rs  sql_editor_tests.rs  syntax_highlight.rs  syntax_highlight_tests.rs  theme.rs
src/ui/intellisense_context/: tests.rs
src/ui/sql_editor/: execution.rs  intellisense.rs  mod.rs  sql_editor_tests.rs
src/ui/syntax_highlight/: syntax_highlight_tests.rs
src/utils/: cargo_test.rs  config.rs  credential_store.rs  feature_catalog.rs  mod.rs
test/: accept.sql  accept2.sql  compat_global.sql  compat_relative.sql  compat_script.sql  double_ampersand.sql  exit.sql  help2  mega_torture.txt  pause.sql  quit2.sql  qwe2.sql  qwer.sql  sample.sql  sample2.sql  substitution.sql  test1.txt  test1_2.txt  test1_3.txt  test2.txt  test2_2.txt  test2_3.txt  test3.txt  test3_2.txt  test3_3.txt  test4.txt  test5.txt  test6.txt  test7.txt  undefine.sql
test/sub/: sample3.sql
