[package]
name = "oracle_query_tool"
version = "0.1.0"
edition = "2021"
description = "A Toad-like Oracle Query Tool built with Rust and FLTK"
authors = ["Developer"]

[dependencies]
fltk = { version = "1.5", features = ["no-pango"] }
oracle = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "5.0"
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
